--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="static/css/style.css" />
+    <link rel="stylesheet" href="web/static/css/style.css" />
   </head>
 
   <body class="bg-dark">
@@ -106,7 +106,7 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-    <script src="static/js/data.js"></script>
-    <script src="static/js/app.js"></script>
+    <script src="web/static/js/data.js"></script>
+    <script src="web/static/js/app.js"></script>
   </body>
 </html>
