--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
                 </li>
                 <li class="list-group-item bg-dark">
                   <label for="city">Enter City</label>
-                  <input type="text" placeholder="Benton" id="city" />
+                  <input type="text" placeholder="benton" id="city" />
                 </li>
                 <li class="list-group-item bg-dark">
                   <label for="state">Enter State</label>
-                  <input type="text" placeholder="Arkansas" id="state" />
+                  <input type="text" placeholder="co" id="state" />
                 </li>
                 <li class="list-group-item bg-dark">
                   <label for="country">Enter Country</label>
-                  <input type="text" placeholder="US" id="country" />
+                  <input type="text" placeholder="us" id="country" />
                 </li>
                 <li class="list-group-item bg-dark">
                   <label for="shape">Enter Shape</label>
-                  <input type="text" placeholder="Circle" id="shape" />
+                  <input type="text" placeholder="circle" id="shape" />
                 </li>
               </ul>
             </form>
